# infoware

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  configMakefile  examples.vcxproj  examples.vcxproj.filters  generator.vcxproj  generator.vcxproj.filters  infoware.sln  infoware.vcxproj  infoware.vcxproj.filters
.github/: FUNDING.yml
.github/workflows/: ci.yml  linux-build.yml  mingw.cmake  window_build.yml
distribution/vcpkg/: CONTROL  portfile.cmake
examples/: CMakeLists.txt  all.cpp  cpu.cpp  cpu_architecture.cpp  cpu_cache_l1.cpp  cpu_cache_l2.cpp  cpu_cache_l3.cpp  cpu_cores.cpp  cpu_endianness.cpp  cpu_frequency.cpp  cpu_instruction_set_supported_3D-now.cpp  cpu_instruction_set_supported_AVX.cpp  cpu_instruction_set_supported_MMX.cpp  cpu_instruction_set_supported_SSE.cpp  cpu_instruction_set_supported_SSE2.cpp  cpu_instruction_set_supported_SSE3.cpp  cpu_memory_physical_available.cpp  cpu_memory_physical_total.cpp  cpu_memory_virtual_available.cpp  cpu_memory_virtual_total.cpp  cpu_model_name.cpp  cpu_quantities_logical.cpp  cpu_quantities_packages.cpp  cpu_quantities_physical.cpp  cpu_vendor.cpp  examples.vcxproj  gpu.cpp  gpu_device_properties_cache_size.cpp  gpu_device_properties_memory_size.cpp  gpu_device_properties_name.cpp  gpu_device_properties_vendor.cpp  pci.cpp  system.cpp  system_OS_info.cpp  system_display_amount.cpp  system_displays.cpp  system_joystick_amount.cpp  system_kernel.cpp  system_keyboard_amount.cpp  system_mouse_amount.cpp  (+1 more)
include/: infoware.hpp
include/infoware/: cpu.hpp  gpu.hpp  infoware.hpp  linkage.hpp  pci.hpp  platform.hpp  system.hpp  version.hpp
include/infoware/detail/: api.hpp  compiler.hpp  cpuid.hpp  error.hpp  graphics.hpp  memory.hpp  os.hpp  pci.hpp  scope.hpp  sysctl.hpp  winstring.hpp
src/: cpu.cpp  pci.cpp  version.cpp
src/cpu/architecture/: architecture_non_windows.cpp  architecture_windows.cpp  windows.cpp
src/cpu/cores/: non_windows.cpp  windows.cpp
src/cpu/endianness/: all.cpp
src/cpu/frequency/: frequency_darwin.cpp  frequency_non_windows.cpp  frequency_non_windows_non_darwin.cpp  frequency_windows.cpp  non_windows.cpp  windows.cpp
src/cpu/instruction_set/: instruction_set.cpp  instruction_set_darwin.cpp  instruction_set_darwin_arm.cpp  instruction_set_non_windows_non_darwin.cpp  instruction_set_windows.cpp  instruction_set_x86.cpp
src/cpu/instuction_set/: instruction_set.cpp  instruction_set_darwin.cpp  instruction_set_non_windows.cpp  instruction_set_non_windows_non_darwin.cpp  instruction_set_windows.cpp  non_windows.cpp  windows.cpp
src/cpu/quantities/: non_windows.cpp  windows.cpp
src/cpu/quantities_cache/: quantities_cache_darwin.cpp  quantities_cache_non_windows.cpp  quantities_cache_non_windows_non_darwin.cpp  quantities_cache_windows.cpp  windows.cpp
src/cpu/vendor_model_name/: non-windows.cpp  vendor_id.cpp  vendor_id_darwin_arm.cpp  vendor_id_x86.cpp  vendor_model_name_darwin.cpp  vendor_model_name_non_windows.cpp  vendor_model_name_non_windows_non_darwin.cpp  vendor_model_name_windows.cpp  windows.cpp
src/detail/: cpuid.cpp  cpuid_non_windows.cpp  cpuid_non_windows_x86.cpp  cpuid_windows.cpp  pci.cpp  pci.generated.cpp  pci_generated.cpp  scope.cpp  sysctl_darwin.cpp  sysctl_non_darwin.cpp  winstring_non_windows.cpp  winstring_windows.cpp
src/gpu/: Metal.mm  OpenCL.cpp  OpenGL.cpp  OpenGL_non_windows_non_darwin.cpp  OpenGL_windows.cpp  blank_all.cpp  d3d.cpp  vulkan.cpp
src/gpu/memory/: OpenCL.cpp  OpenGL.cpp  blank_all.cpp  d3d.cpp  non_windows.cpp  windows.cpp  wmi.cpp
src/system/OS_info/: os_info_darwin.cpp  os_info_non_windows.cpp  os_info_non_windows_non_darwin.cpp  os_info_windows.cpp  windows.cpp
src/system/amounts/: amounts_non_windows.cpp  amounts_windows.cpp  non-windows.cpp  windows.cpp
src/system/display_amount/: non-windows-stub.cpp  windows.cpp
src/system/displays/: default-blank.cpp  displays_apple.cpp  displays_darwin.cpp  displays_default_blank.cpp  displays_windows.cpp  displays_x11.cpp  windows.cpp  x11.cpp
src/system/kernel_info/: kernel_info_non_windows.cpp  kernel_info_windows.cpp  non-windows.cpp  windows.cpp
src/system/memory/: memory_darwin.cpp  memory_non_windows.cpp  memory_non_windows_non_darwin.cpp  memory_windows.cpp  non-windows.cpp  windows.cpp
src/system/process/: process_stats_non_windows.cpp  process_stats_windows.cpp
tools/: pci_generator.cpp
tools/pci_generator/src/: pci_generator.cpp
